--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes": [
         {
-            "src": "/templates/dha.html",
-            "dest": "/templates/$1"
+            "src": "/templates/(.*)",
+            "dest": "/templates/dha.intml"
         },
         {
             "src": "/(.*)",
